# SpeedTests

./: .gitignore  LICENSE  README.md  SpeedTests.sln
_automation/: .gitignore  README.md  c.json  c3.json  clisp.json  clojure.json  codon.json  cpp.json  crystal.json  cs.json  d.json  dart.json  elixir.json  fasm.json  forth.json  fortran.json  fs.json  get_version.py  go.json  haskell.json  java.json  javascript.json  julia.json  kotlin.json  lua.json  main.py  mojo.json  nasm.json  nelua.json  nim.json  nim2.json  ocaml.json  odin.json  pascal.json  perl.json  php.json  php_with_jit.json  php_with_opcache.json  python3.json  python311.json  (+14 more)
_parallel/: README.md
_vectorized/: README.md
bau/: Makefile  README.txt  main.bau
c/: Makefile  main.c
c3/: Makefile  main.c3
clisp/: Makefile  main.cl  main2.cl
clojure/: .gitignore  Makefile  compile.clj  deps.edn
codon/: Makefile  main.py
cpp/: Makefile  main.cpp
crystal/: Makefile  main.cr
cs/: .gitignore  Makefile  Program.cs
d/: .gitignore  Makefile  main.d
dart/: .gitignore  Makefile  main.dart
elixir/: .gitignore  Makefile  caller.exs  main.exs  munchausen.ex
fasm/: Makefile  main_x64.asm  main_x86.asm
forth/: Makefile  README.txt  main.fs
fortran/: Makefile  main.f08
fs/: .gitignore  Makefile  Program.fs  fs.fsproj
go/: Makefile  main.go  main_v1
haskell/: .gitignore  Makefile  cabal.project.freeze  haskell.cabal  main.hi  main.hs  main_v1.hs  (+1 more)
python3_with_rust/: .gitignore  Cargo.toml  Makefile  README.txt  main.py  pyproject.toml  start_v1.sh  venv
python3_with_rust/src/: lib.rs
(+134 files in other folders)
