[package]
name = "python3_with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python3_with_rust"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.13.0"
pyo3 = { version = "0.24.1", features = ["extension-module"] }
